--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="base/src"/>
 	<classpathentry kind="src" path="client/src"/>
 	<classpathentry kind="src" path="extend/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/LCO_360"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/adempiere361liberoHR"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/patches_360"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/adempiere360lts"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
