--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/LCO_360"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/adempiere361liberoHR"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/adempiere361libero"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/patches361"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/adempiere361"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
