--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="client/src"/>
 	<classpathentry kind="src" path="extend/src"/>
+	<classpathentry kind="src" path="zkwebui/WEB-INF/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LCO_360"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/adempiere361liberoHR"/>
