--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="client/src"/>
 	<classpathentry kind="src" path="extend/src"/>
-	<classpathentry kind="src" path="zkwebui/WEB-INF/src"/>
+	<classpathentry kind="src" output="WEB-INF/classes" path="zkwebui/WEB-INF/src"/>
+	<classpathentry kind="src" path="zkwebui/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/jdom-1.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/LCO_360"/>
